service-mesh/yamls/serviceb/serviceb-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: serviceb-gateway
  namespace: serviceb
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: serviceb
      protocol: HTTP
    hosts:
    - 'serviceb.mesh.onap.eu'
