service-mesh/yamls/serviceb/serviceb-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: serviceb
  namespace: serviceb
spec:
  hosts:
  - serviceb.mesh.onap.eu
  gateways:
  - gateway
  http:
    - route:
      - destination:
          port:
            number: 80
          host: serviceb
